tests/passing/pipe_chain.tails
func id(x: int) -> int:
  x

func tests() -> unit:
  discard (123 |> id) |> id
  discard 123 |> id |> id
