tests/failing/call_site_invalid_direct_callee.tails
func tests() -> unit:
  123()

  pass
